--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "panama-elite-real-estate---double-the-standard",
+  "name": "2ble-web",
   "private": true,
   "version": "0.0.0",
   "type": "module",
